tests/snapshots/tui_snapshots__dirty_navigation_prompt_exposes_save_discard_and_cancel.snap
---
source: tests/tui_snapshots.rs
expression: terminal.backend()
---
"┌ Editing · notes/welcome.md ────────────────────────────────────────────────────────────┐"
"│Draft # Welcome                                                                         │"
"│                                                                                        │"
"│                                                                                        │"
"│                                                                                        │"
"│                                                                                        │"
"│                                                                                        │"
"│                                                                                        │"
"│           ┌ Unsaved changes ───────────────────────────────────────────────┐           │"
"│           │This note has changes that have not been saved.                 │           │"
"│           │                                                                │           │"
"│           │[s] Save   [d] Discard   [Esc] Cancel                           │           │"
"│           │                                                                │           │"
"│           │                                                                │           │"
"│           └────────────────────────────────────────────────────────────────┘           │"
"│                                                                                        │"
"│                                                                                        │"
"│                                                                                        │"
"│                                                                                        │"
"└────────────────────────────────────────────────────────────────────────────────────────┘"
"Global  ^S Save  ^F Find  ^P Open  ^B Files  ^Z Undo  ^Y Redo  ^C Copy  ^X Cut  ^V Paste  "
"Files   ↑↓ Preview  →/Enter Folder  ← Parent  Enter Edit  n File  N Folder  r Rename  m Mo"
"Editor  Esc Files  ⌥←→ Word  ⌘←→ Line  ⌘↑↓ Doc  Enter/S-Enter Newline  Tab/S-Tab Indent   "
" Markdown  ·  modified  ·  Ln 1, Col 7                                                    "
