tests/snapshots/tui_snapshots__external_conflict_prompt_exposes_reload_overwrite_and_cancel.snap
---
source: tests/tui_snapshots.rs
expression: terminal.backend()
---
"┌ notes/welcome.md ──────────────────────────────────────────────────────────────────────┐"
"│# Welcome                                                                               │"
"│                                                                                        │"
"│                                                                                        │"
"│                                                                                        │"
"│                                                                                        │"
"│                                                                                        │"
"│                                                                                        │"
"│           ┌ External conflict ─────────────────────────────────────────────┐           │"
"│           │notes/welcome.md was modified outside Carnet.                   │           │"
"│           │Reload uses the disk version; overwrite keeps this editor       │           │"
"│           │version.                                                        │           │"
"│           │                                                                │           │"
"│           │[r] Reload   [o] Overwrite   [Esc] Cancel                       │           │"
"│           │                                                                │           │"
"│           └────────────────────────────────────────────────────────────────┘           │"
"│                                                                                        │"
"│                                                                                        │"
"│                                                                                        │"
"└────────────────────────────────────────────────────────────────────────────────────────┘"
"Global  ^S Save  ^F Find  ^P Open  ^B Files  ^Z Undo  ^Y Redo  ^C Copy  ^X Cut  ^V Paste  "
"Files   ↑↓ Select  ←→ Fold  Enter Open  n New File  N New Folder  r Rename  m Move  Del De"
"Editor  Arrows Move  S-Arrows Select  Enter Newline  Tab Indent  S-Tab Outdent  Home/End L"
" Markdown  ·  saved  ·  Ln 1, Col 1                                                       "
