tests/snapshots/tui_snapshots__git_failure_distinguishes_saved_from_committed_and_offers_retry.snap
---
source: tests/tui_snapshots.rs
expression: terminal.backend()
---
"┌ Editing · notes/welcome.md ────────────────────────────────────────────────────────────┐"
"│# Welcome                                                                               │"
"│                                                                                        │"
"│                                                                                        │"
"│                                                                                        │"
"│                                                                                        │"
"│                                                                                        │"
"│                                                                                        │"
"│           ┌ Git failure ───────────────────────────────────────────────────┐           │"
"│           │The file was saved, but it was not committed.                   │           │"
"│           │Git identity is not configured                                  │           │"
"│           │                                                                │           │"
"│           │[r] Retry commit   [Esc] Continue editing                       │           │"
"│           │                                                                │           │"
"│           │                                                                │           │"
"│           └────────────────────────────────────────────────────────────────┘           │"
"│                                                                                        │"
"│                                                                                        │"
"│                                                                                        │"
"└────────────────────────────────────────────────────────────────────────────────────────┘"
"Global  ^S Save  ^F Find  ^P Open  ^B Files  ^Z Undo  ^Y Redo  ^C Copy  ^X Cut  ^V Paste  "
"Files   ↑↓ Preview  →/Enter Folder  ← Parent  Enter Edit  n File  N Folder  r Rename  m Mo"
"Editor  Esc Files  ⌥←→ Word  ⌘←→ Line  ⌘↑↓ Doc  Enter/S-Enter Newline  Tab/S-Tab Indent   "
" Markdown  ·  saved  ·  Ln 1, Col 1  ·  saved · not committed: Git identity is not configu"
