tests/snapshots/tui_snapshots__narrow_workspace_floats_the_tree_over_a_full_editor.snap
---
source: tests/tui_snapshots.rs
expression: terminal.backend()
---
"┌ Files · notes · overlay ───────┐─────────────────────────────────────┐"
"│× archive.bin                   │                                     │"
"│• welcome.md                    │                                     │"
"│                                │                                     │"
"│                                │                                     │"
"│                                │                                     │"
"│                                │                                     │"
"│                                │                                     │"
"│                                │                                     │"
"│                                │                                     │"
"│                                │                                     │"
"│                                │                                     │"
"│                                │                                     │"
"│                                │                                     │"
"│                                │                                     │"
"│                                │                                     │"
"│                                │                                     │"
"└────────────────────────────────┘─────────────────────────────────────┘"
"Global  ⌘S Save  ^G Push  ⌘F Find  ⌘P Open  ⌘B Files  ⌘Z/⇧⌘Z Undo/Redo  "
"Files   ↑↓ Preview  →/Enter Folder  ← Parent  Enter Edit  n File  N Fold"
"Editor  Esc Files  ⇧←→ Select  ⌥←→ Word  ⌘←→ Line  ⌘↑↓ Doc  ⌥⌫/Del Word "
" Markdown  ·  saved  ·  Ln 1, Col 1                                     "
