tests/snapshots/tui_snapshots__repository_home_is_a_discoverable_first_run_surface.snap
---
source: tests/tui_snapshots.rs
assertion_line: 12
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ Carnet Repository home                                                       │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Repositories ────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│  No repositories registered yet.                                             │"
"│                                                                              │"
"│  Create a repository with [c] or register an existing one with [a].          │"
"│  Carnet will mark the first repository as your default.                      │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Repository actions ──────────────────────────────────────────────────────────┐"
"│ [c] Create  [a] Register  [Enter] Open available  [R] Rename                 │"
"│ [d] Default  [u] Unregister  [Ctrl+Q] Quit                                   │"
"└──────────────────────────────────────────────────────────────────────────────┘"
