tests/snapshots/tui_snapshots__wide_workspace_keeps_tree_and_editor_visible.snap
---
source: tests/tui_snapshots.rs
expression: terminal.backend()
---
"┌ Files · notes ─────────────┐┌ Editing · notes/welcome.md ──────────────────────────────────────────────────┐"
"│× archive.bin               ││# Welcome                                                                     │"
"│• welcome.md                ││                                                                              │"
"│                            ││Write freely.                                                                 │"
"│                            ││Local edit                                                                    │"
"│                            ││                                                                              │"
"│                            ││                                                                              │"
"│                            ││                                                                              │"
"│                            ││                                                                              │"
"│                            ││                                                                              │"
"│                            ││                                                                              │"
"│                            ││                                                                              │"
"│                            ││                                                                              │"
"│                            ││                                                                              │"
"│                            ││                                                                              │"
"│                            ││                                                                              │"
"│                            ││                                                                              │"
"│                            ││                                                                              │"
"│                            ││                                                                              │"
"│                            ││                                                                              │"
"│                            ││                                                                              │"
"│                            ││                                                                              │"
"│                            ││                                                                              │"
"│                            ││                                                                              │"
"│                            ││                                                                              │"
"└────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────┘"
"Global  ^S Save  ^G Push  ^F Find  ^P Open  ^B Files  ^Z/Y Undo/Redo  ^C/X/V Clipboard  ^A All  ^Q Quit       "
"Files   ↑↓ Preview  →/Enter Folder  ← Parent  Enter Edit  n File  N Folder  r Rename  m Move  Del Delete      "
"Editor  Esc Files  ⌥←→ Word  ⌘←→ Line  ⌘↑↓ Doc  Enter/S-Enter Newline  Tab/S-Tab Indent                       "
" Markdown  ·  modified  ·  Ln 4, Col 11                                                                       "
